force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>IF(RecordTypeId = &apos;0125e000000smaDAAQ&apos;, &apos;Device&apos;,
IF(RecordTypeId = &apos;0125e000000smZyAAI&apos;, &apos;Food/Dietary&apos;,
IF(RecordTypeId = &apos;0125e000000sma8AAA&apos;, &apos;Medication&apos;, &apos;N/A&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>