force-app/main/default/objects/Product2/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C-2</fullName>
            </value>
            <value>
                <fullName>C-3</fullName>
            </value>
            <value>
                <fullName>C-4</fullName>
            </value>
            <value>
                <fullName>C-5</fullName>
            </value>
            <value>
                <fullName>C-6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>