force-app/main/default/objects/Product2/recordTypes/Device.recordType-meta.xml
<RecordType>
    <fullName>Device</fullName>
    <active>true</active>
    <description>Medical device, etc.</description>
    <label>Device</label>
</RecordType>