force-app/main/default/objects/Product2/recordTypes/Food_Dietary_Products.recordType-meta.xml
<RecordType>
    <fullName>Food_Dietary_Products</fullName>
    <active>true</active>
    <description>For food and dietary supplement products only.</description>
    <label>Food/Dietary Products</label>
</RecordType>