force-app/main/default/objects/Product2/recordTypes/Medication.recordType-meta.xml
<RecordType>
    <fullName>Medication</fullName>
    <active>true</active>
    <description>OTC, Rx products</description>
    <label>Medication</label>
</RecordType>