force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Distributor__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>